--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+*
+    margin: 0
+    padding: 0
+    font-family: 'DM Sans', sans-serif
+body
+    height: 100%
+    width: 100%
+    background-image: url('./assets/images/pexels-guilherme-rossi-1755700-2.jpg')
+    background-size: cover
+    background-repeat: no-repeat
+    background-position: center
+    color: #555555
