--- a/src/app/components/flight-search/flight-search.component.html
+++ b/src/app/components/flight-search/flight-search.component.html
@@ -1,15 +1,14 @@
 <div class="container">
     
-    
     <div id="searchDiv">
         <h2>Let's book your flight</h2>
         <div id="search">
             <div class="searchBar">
-                <img src="src/../../assets/icons/flight_takeoff_FILL0_wght400_GRAD0_opsz48.svg" alt="">
+                <img src="./assets/icons/flight_takeoff_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                 <input type="text" placeholder="From">
             </div>
             <div class="searchBar">
-                <img src="src/../../assets/icons/flight_land_FILL0_wght400_GRAD0_opsz48.svg" alt="">
+                <img src="./assets/icons/flight_land_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                 <input type="text" placeholder="To">
             </div>
         </div>
@@ -20,13 +19,13 @@
         <div id="popularDestinationsContainer">
             <div class="popularDestination">
                 <div class="destinationImageContainer">
-                    <img src="src/../../assets/images/pexels-lina-kivaka-5623947.jpg" alt="London">
+                    <img src="./assets/images/pexels-lina-kivaka-5623947.jpg" alt="London">
                 </div>
                 <h4>London</h4>
             </div>
             <div class="popularDestination">
                 <div class="destinationImageContainer">
-                    <img src="src/../../assets/images/pexels-griffin-wooldridge-2676642.jpg" alt="Rome">
+                    <img src="./assets/images/pexels-griffin-wooldridge-2676642.jpg" alt="Rome">
                 </div>
                 <h4>Rome</h4>
             </div>
