--- a/src/app/components/flight-search/flight-search.component.sass
+++ b/src/app/components/flight-search/flight-search.component.sass
@@ -1,4 +1,3 @@
-
 .container
     width: 100%
     height: 92vh
@@ -7,10 +6,10 @@
     grid-template-columns: 1fr
     h2
         margin-left: 4vw
-        font-size: 20px
+        font-size: 22px
         font-weight: 700
     h4
-        font-size: 16px
+        font-size: 18px
     #searchDiv
         width: 100%
         align-self: center
@@ -25,7 +24,7 @@
             .searchBar
                 background-color: rgba(255, 255, 255, 0.8)
                 padding: 2px 1vw
-                width: 94vw
+                width: 90vw
                 display: flex
                 flex-direction: row
                 align-items: center
@@ -51,14 +50,13 @@
             flex-direction: row
             overflow: scroll
             .popularDestination
-                margin: 2vw
-                h4
-                    color: white
+                margin: 4vw
                 .destinationImageContainer
-                    height: 25vh
-                    width: 25vh
+                    height: 30vh
+                    width: 30vh
                     overflow: hidden
                     border-radius: 10px
+                    border: 1px solid #CCCCCC
                     img
                         object-fit: cover
                         height: 100%
