Added Destinations and Sign In pages

--- a/src/app/components/flight-search/flight-search.component.sass
+++ b/src/app/components/flight-search/flight-search.component.sass
@@ -1,9 +1,12 @@
 .container
     width: 100%
+    top: 8vh
+    position: relative
     height: 92vh
     display: grid
     grid-template-rows: 1fr 1fr
     grid-template-columns: 1fr
+    overflow: hidden
     h2
         margin-left: 4vw
         font-size: 22px
