--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <button class="selected">Flights</button>
-    <button>Destinations</button>
-    <button>My account</button>
+    <button class="selected" routerLink="">Flights</button>
+    <button routerLink="destinations">Destinations</button>
+    <button routerLink="sign-in">My account</button>
 </div>
