--- a/src/styles.sass
+++ b/src/styles.sass
@@ -2,7 +2,7 @@
     margin: 0
     padding: 0
     font-family: 'DM Sans', sans-serif
-body
+html,body
     height: 100%
     width: 100%
     background-image: url('./assets/images/background.jpg')
